easystogu/portal/client.yml
apiVersion: v1
kind: Pod 
metadata: 
  name: easystogu-client-curl
spec:
  containers:
  - name: curl
    image: eyaweiw.cn:5000/appropriate/curl:latest 
    imagePullPolicy: IfNotPresent
    command: ["/bin/sh"]
    args: ["-c","curl easystogu-service:8080/portal/home/ "]
