easystogu/portal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easystogu-portal
spec:
  replicas: 1
  selector:
    matchLabels:
      app: easystogu-portal
  template:
    metadata:
      labels:
        app: easystogu-portal
    spec:
      containers:
      - name: easystogu-portal
        image: eyaweiw.cn:5000/easystogu-portal:2.0.0-snapshot 
        imagePullPolicy: IfNotPresent
        ports:
        - name: http
          containerPort: 8080
