easystogu/portal/istio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: easystogu-portal-v2
  labels:
    version: v2
spec:
  replicas: 3
  selector:
    matchLabels:
      app: easystogu-portal
      version: v2
  template:
    metadata:
      labels:
        app: easystogu-portal
        version: v2
    spec:
      containers:
      - name: easystogu-portal
        image: eyaweiw.cn:5000/easystogu-portal:2.0.0-snapshot 
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "1"
        ports:
        - name: http
          containerPort: 8080
