easystogu/portal/istio-service.yaml
##easystogu service
apiVersion: v1
kind: Service
metadata:
  name: easystogu-portal
  labels:
    app: easystogu-portal
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: easystogu-portal
