easystogu/portal/service-loadbalancer.yml
---
apiVersion: v1
kind: Service
metadata:
  name: easystogu-portal-loadbalancer
  labels:
    app: easystogu-portal
spec:
  type: LoadBalancer
  externalIPs:
  - 192.168.56.190
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30004
      protocol: TCP
  selector:
    app: easystogu-app
  externalTrafficPolicy: Local
