easystogu/portal/istio-virtualService.yaml
##easystogu VirtualService
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: easystogu-portal
spec:
  hosts:
  - "*"
  gateways:
  - easystogu-portal-gateway
  http:
  - match:
    - uri:
        exact: /easystogu-portal
    route:
    - destination:
        host: easystogu-portal
        port:
          number: 8080
